Bug 1110507-Loop self-image can be cropped by scrolling out of view (privacy), r=jaws
UltraBlame original commit: 067eb4b0d851ea5f70530b83996f23a5c9c0f413

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -14,6 +14,30 @@
 %endif
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#chat-window {
+ 
+
+
+
+
+  min-width: 320px;
+  min-height: 280px;
+}
+
 #main-window[customize-entered] {
   min-width: -moz-fit-content;
 }
